# artnewsroom-v2

./: .gitignore  CONTRACTS.md
data/: taste-profile.json
scraper/: Cargo.toml
scraper/src/: db.rs  dedup.rs  extract.rs  feeds.rs  images.rs  main.rs  quality.rs  score.rs  sources.rs
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/annotation-counts/: route.ts
web/src/app/api/annotations/: route.ts
web/src/app/api/archive/: route.ts
web/src/app/api/article-images/: route.ts
web/src/app/api/articles/: route.ts
web/src/app/api/articles/[id]/: route.ts
web/src/app/api/drawings/: route.ts
web/src/app/api/read/: route.ts
web/src/app/api/save/: route.ts
web/src/app/api/sources/: route.ts
web/src/app/api/status/: route.ts
web/src/components/: AboutPage.tsx  ArticleReader.tsx  PipelineDashboard.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx
web/src/lib/: db.ts
